--- a/P010489.opf/meta.yml
+++ b/P010489.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010489
+id: P010489
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W30155
   title: བློ་བཟང་ཐུབ་བསྟན་དབང་ཕྱུག་འཇིགས་མེད་རྒྱ་མཚོ་དགེ་ལེགས་རབ་རྒྱས་ཀྱི་རྣམ་ཐར་དད་པའི་པད་ཚལ་བཞད་པའི་ཉི་འོད།
-  volume: ''
   author: ''
+  volumes: {}
