volumes of meta updated

--- a/P010489.opf/meta.yml
+++ b/P010489.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W30155
   title: བློ་བཟང་ཐུབ་བསྟན་དབང་ཕྱུག་འཇིགས་མེད་རྒྱ་མཚོ་དགེ་ལེགས་རབ་རྒྱས་ཀྱི་རྣམ་ཐར་དད་པའི་པད་ཚལ་བཞད་པའི་ཉི་འོད།
   author: ''
-  volumes: {}
+  volumes:
+    55da12e54fec48bb9e86450dc524a79e:
+      image_group_id: I6477
+      title: ''
+      volume_number: 1
+      total_pages: 736
