--- a/P010489.opf/layers/v001/Pagination.yml
+++ b/P010489.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: a349e23305414d6e8d341870d8ab0495
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b6450440aebd48fabf09a2662553506c:
