--- a/P010489.opf/meta.yml
+++ b/P010489.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010489
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W30155
   title: བློ་བཟང་ཐུབ་བསྟན་དབང་ཕྱུག་འཇིགས་མེད་རྒྱ་མཚོ་དགེ་ལེགས་རབ་རྒྱས་ཀྱི་རྣམ་ཐར་དད་པའི་པད་ཚལ་བཞད་པའི་ཉི་འོད།
