--- a/P010489.opf/meta.yml
+++ b/P010489.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010489
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:52:26.927683
 source_metadata:
   id: bdr:W30155
   title: བློ་བཟང་ཐུབ་བསྟན་དབང་ཕྱུག་འཇིགས་མེད་རྒྱ་མཚོ་དགེ་ལེགས་རབ་རྒྱས་ཀྱི་རྣམ་ཐར་དད་པའི་པད་ཚལ་བཞད་པའི་ཉི་འོད།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 736
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
